--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AWChromium"
+        android:theme="@style/Theme.MoeMoe"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
